--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,173 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+}
+
+/* Anzeigen beider Seiten nebeneinander */
+.App {
+  display: flex;
+}
+
+/* Food-Seite */
+/* Großes Bild */
+.hero-image img {
+  max-width: 100%;
+  height: auto;
+}
+
+.hero-text {
+  margin-top: -30px;
+  box-shadow: 0px 5px 10px lightgrey;
+}
+
+.hero-text .menu-text {
+  margin-top: 20px;
+}
+
+.menu-text h1 {
+  text-align: left;
+  font-size: xx-large;
+  margin-left: 300px;
+  font-weight: 700;
+  padding-top: 25px;
+}
+
+.menu-text p {
+  text-align: left;
+  margin-left: 300px;
+}
+
+.menu-buttons {
+  text-align: left;
+  margin-left: 300px;
+  margin-top: -10px;
+  display: flex;
+  align-items: center;
+}
+
+.search-button {
+  background-color: white;
+  border: none;
+}
+.search-button-img {
+  width: 25px;
+  height: 25px;
+}
+
+.food-buttons {
+  margin: 15px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: white;
+  border: none;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+/* Button Style wenn fokussiert */
+.food-buttons:focus {
+  margin: 15px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  font-weight: 700;
+}
+
+.foodsection-header h2 {
+  font-size: 25px;
+  text-align: left;
+  margin-left: 300px;
+  margin-top: 50px;
+}
+
+.food-item {
+  display: flex;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+  border-color: lightgray;
+  margin-left: 260px;
+  margin-right: 260px;
+  margin-bottom: 20px;
+}
+
+.food-item-title {
+  text-align: left;
+  margin-left: 20px;
+}
+
+.food-item-ing {
+  margin-top: 10px;
+}
+
+.food-item-size {
+  color: grey;
+  margin-top: 10px;
+}
+
+.food-item-price {
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.food-item-img {
+  flex: 25%;
+  margin-top: 30px;
+  margin-right: -30px;
+}
+
+.food-item-img img {
+  max-width: 120px;
+  height: 120px;
+}
+.add-item {
+  flex: 7%;
+}
+
+.add-item-button {
+  border: none;
+  background-color: white;
+  text-align: right;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+.add-item-img {
+  max-width: 35px;
+  height: 35px;
+}
+
+/* Warenkorb */
+.cart-side {
+  flex: 30%;
+  border: solid;
+  border-color: lightgrey;
+  border-width: 1px;
+}
+
+.cart-side h1 {
+  font-size: x-large;
+  margin-top: 60px;
+}
+
+.cart-content p {
+  font-size: 18px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.shopping-img {
+  height: 50px;
+  margin-top: 40px;
 }
