--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,11 @@ code {
   max-width: 120px;
   height: 120px;
 }
+
+.food-side{
+ min-width: 80%;
+}
+
 .add-item {
   flex: 7%;
 }
@@ -150,7 +155,6 @@ code {
 
 /* Warenkorb */
 .cart-side {
-  flex: 30%;
   border: solid;
   border-color: lightgrey;
   border-width: 1px;
