added new version of components, some fixes

--- a/exersice-resources/Components/Cart/CartItem.css
+++ b/exersice-resources/Components/Cart/CartItem.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     margin-bottom: 40px;
     width: 100%;
+    text-align: left;
 }
 
 /* the 'Anmekrung hinzufügen' div */
