--- a/exersice-resources/Components/Modal.css
+++ b/exersice-resources/Components/Modal.css
@@ -120,4 +120,7 @@
 .extras {
     margin-left: 20px;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
